--- a/templates/paiements/dashboard_intelligent.html
+++ b/templates/paiements/dashboard_intelligent.html
@@ -325,7 +325,7 @@
                         <a href="{% url 'paiements:recherche_contrats_intelligente' %}" class="btn btn-info action-btn">
                             <i class="fas fa-search"></i> Recherche contrats
                         </a>
-                        <a href="{% url 'paiements:dashboard' %}" class="btn btn-secondary action-btn">
+                        <a href="{% url 'paiements:paiements_dashboard' %}" class="btn btn-secondary action-btn">
                             <i class="fas fa-chart-bar"></i> Dashboard classique
                         </a>
                     </div>
