--- a/templates/paiements/paiement_partiel_dedie.html
+++ b/templates/paiements/paiement_partiel_dedie.html
@@ -347,7 +347,7 @@
                                 <button type="submit" class="btn btn-paiement-partiel me-3">
                                     <i class="bi bi-check-circle me-2"></i>Enregistrer le Paiement Partiel
                                 </button>
-                                <a href="{% url 'paiements:dashboard' %}" class="btn btn-secondary-custom">
+                                <a href="{% url 'paiements:paiements_dashboard' %}" class="btn btn-secondary-custom">
                                     <i class="bi bi-arrow-left me-2"></i>Retour au Dashboard
                                 </a>
                             </div>
