--- a/templates/paiements/recus_liste.html
+++ b/templates/paiements/recus_liste.html
@@ -199,7 +199,7 @@
                 <button type="submit" class="btn btn-primary">
                     <i class="fas fa-search"></i> Filtrer
                 </button>
-                <a href="{% url 'paiements:dashboard' %}" class="btn btn-secondary">
+                <a href="{% url 'paiements:paiements_dashboard' %}" class="btn btn-secondary">
                     <i class="fas fa-times"></i> Retour au Dashboard
                 </a>
             </div>
